force-app/main/default/objects/Ably_Event__e/Ably_Event__e.object-meta.xml
<CustomObject>
    <label>Ably Event</label>
    <pluralLabel>Ably Events</pluralLabel>
</CustomObject>