force-app/main/default/objects/Ably_Event__e/fields/Channel_Name__c.field-meta.xml
<CustomField>
    <fullName>Channel_Name__c</fullName>
    <label>Channel Name</label>
    <length>200</length>
    <required>true</required>
    <type>Text</type>
</CustomField>