force-app/main/default/objects/Ably_Event__e/fields/Data__c.field-meta.xml
<CustomField>
    <fullName>Data__c</fullName>
    <label>Data</label>
    <length>255</length>
    <type>Text</type>
</CustomField>